--- a/Ritchie Blackmore Quote Generator/index.html
+++ b/Ritchie Blackmore Quote Generator/index.html
@@ -20,7 +20,7 @@
             </header>
         </div>
 
-        <div class="row flex-top justify-content-center">
+        <div class="row flex-top justify-content-center" id="quoteBtn"> 
         <button id="button" class="btn-large new-quote-button" onclick="getQuote()">
             New Quote
         </button>
@@ -29,7 +29,7 @@
         <div class="row justify-content-center">
             <main class="card">
                 <p class="quote card-body center" id="newQuoteSection">
-                    Simplicity is the key.
+                   Simplicity is the key.
                 </p>
             </main>
             </div>
@@ -43,6 +43,5 @@
     </div>
 
 
-    
   </body>
 </html>
