--- a/Ritchie Blackmore Quote Generator/index.html
+++ b/Ritchie Blackmore Quote Generator/index.html
@@ -29,7 +29,7 @@
         <div class="row justify-content-center">
             <main class="card">
                 <p class="quote card-body center" id="newQuoteSection">
-                   Simplicity is the key.
+                   *Simplicity is the key.*
                 </p>
             </main>
             </div>
