Added tweet button

--- a/Ritchie Blackmore Quote Generator/index.html
+++ b/Ritchie Blackmore Quote Generator/index.html
@@ -24,12 +24,16 @@
         <button id="button" class="btn-large new-quote-button" onclick="getQuote()">
             New Quote
         </button>
+
+        <button class="btn-large new-quote-button" id="tweet-button">Tweet</button>
+
+
         </div>
 
         <div class="row justify-content-center">
             <main class="card">
                 <p class="quote card-body center" id="newQuoteSection">
-                   *Simplicity is the key.*
+                   "Simplicity is the key."
                 </p>
             </main>
             </div>
@@ -41,6 +45,8 @@
             <i class="fab fa-github"></i>
             </a>
     </div>
+
+
 
 
   </body>
